--- a/src/AdminBundle/Resources/views/Home/index.html.twig
+++ b/src/AdminBundle/Resources/views/Home/index.html.twig
@@ -1,6 +1,14 @@
 {% extends "AdminBundle::layout.html.twig" %}
 
-{% block content %}
 
+
+{% block page_title  %}
+The Title
+{% endblock page_title %}
+
+{% block content %}
+    <div class="col-md-12">
+        Blank page content goes here
+    </div>
 
 {% endblock content %}
