--- a/src/AdminBundle/Resources/views/layout.html.twig
+++ b/src/AdminBundle/Resources/views/layout.html.twig
@@ -1,6 +1,5 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/layout.html.twig' %}
 
-{% block body %}
-        {{ block('content') }}
-
-{% endblock %}
+{% block title %}
+Welcome Admin
+{% endblock title %}
