--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -1,4 +1,13 @@
+
 {% extends 'base.html.twig' %}
+
+{% block stylesheets %}
+        <style>
+                body {
+                        background-color: #fff !important;
+                }
+        </style>
+{% endblock %}
 
 {% block body %}
 <div class="login">
@@ -6,3 +15,4 @@
         {{ block('content') }}
         </div>
 {% endblock %}
+
