--- a/src/AppBundle/Resources/views/Profile/edit.html.twig
+++ b/src/AppBundle/Resources/views/Profile/edit.html.twig
@@ -1,5 +1,4 @@
-
-{% extends "template/layout.html.twig" %}
+{% extends ":template:layout.html.twig" %}
 
 {% block page_title  %}
     Edit Information
