--- a/src/AppBundle/Resources/views/Registration/register.html.twig
+++ b/src/AppBundle/Resources/views/Registration/register.html.twig
@@ -1,15 +1,15 @@
 {% extends ":template:layout.html.twig" %}
 
 {% block page_title  %}
-    Profile Information
+    Add New User
 {% endblock page_title %}
 
 {% block page_name  %}
-    Profile Information
+    Add New User
 {% endblock page_name %}
 
 {% block content %}
     <div class="row">
-        {% include "FOSUserBundle:Profile:show_content.html.twig" %}
+        {% include "FOSUserBundle:Registration:register_content.html.twig" %}
     </div>
 {% endblock content %}
