--- a/app/Resources/views/template/layout.html.twig
+++ b/app/Resources/views/template/layout.html.twig
@@ -4,7 +4,7 @@
     <div class="header navbar  navbar-fixed-top">
         <!-- BEGIN TOP NAVIGATION BAR -->
         <div class="header-inner">
-            <a id="home-logo" href="{{ path('homepage') }}">
+            <a id="home-logo" href="{{ path('fos_user_security_login') }}">
                 <img src="http://dev.matthuddleston.com/wp-content/uploads/2015/11/logo-final-nomal.png" alt="logo"/>
             </a>
             <!-- BEGIN RESPONSIVE MENU TOGGLER -->
@@ -33,10 +33,17 @@
                         <li>
                             <a href="{{ path('fos_user_change_password') }}"><i class="fa fa-key"></i> Change Password</a>
                         </li>
+                        {% if is_granted('ROLE_ADMIN') %}
+                            <li class="divider">
+                            </li>
+                            <li>
+                                <a href="{{ path('fos_user_registration_register') }}"><i class="fa fa-key"></i> Add User</a>
+                            </li>
+                        {% endif %}
                         <li class="divider">
                         </li>
                         <li>
-                        <a href="{{ path('fos_user_security_logout') }}"><i class="fa fa-key"></i> Log Out</a>
+                        <a href="{{ path('fos_user_security_logout') }}"><i class="icon-rocket"></i> Log Out</a>
                         </li>
                     </ul>
                 </li>
@@ -63,18 +70,45 @@
                         </div>
                         <!-- BEGIN SIDEBAR TOGGLER BUTTON -->
                     </li>
-                    <li class="start active">
-                        <a href="index.html">
+
+                    <li class="start ">
+                        {% if is_granted('ROLE_ADMIN') %}
+                        <a href="{{ path('admin_home') }}">
+                            {% elseif is_granted('ROLE_USER') %}
+                            <a href="{{ path('user_home') }}">
+                        {% endif %}
+
                             <i class="icon-home"></i>
                             <span class="title">Dashboard</span>
                         </a>
                     </li>
                     <li class="z ">
                         <a href="javascript:;">
-                            <i class="icon-puzzle"></i>
+                            <i class="icon-settings"></i>
+                            <span class="title">Settings</span>
+                            <span class="selected"></span>
+                            <span class="arrow "></span>
+                        </a>
+                        <ul class="sub-menu">
+                            <li>
+                                <a href="{{ path('fos_user_profile_edit') }}"><i class="fa fa-user"></i> Update Profile</a>
+                            </li>
+                            <li>
+                                <a href="{{ path('fos_user_change_password') }}"><i class="fa fa-key"></i> Change Password</a>
+                            </li>
+                            {% if is_granted('ROLE_ADMIN') %}
+                                <li>
+                                    <a href="{{ path('fos_user_registration_register') }}"><i class="icon-anchor"></i></i> Add User</a>
+                                </li>
+                            {% endif %}
+                        </ul>
+                    </li>
+                    <li class="z ">
+                        <a href="javascript:;">
+                            <i class="icon-pin"></i>
                             <span class="title">Page Layouts</span>
                             <span class="selected"></span>
-                            <span class="arrow open"></span>
+                            <span class="arrow "></span>
                         </a>
                         <ul class="sub-menu">
                             <li>
