--- a/src/AppBundle/Resources/views/User/home.html.twig
+++ b/src/AppBundle/Resources/views/User/home.html.twig
@@ -1,15 +1,18 @@
 {% extends ":template:layout.html.twig" %}
 
+
+
 {% block page_title  %}
-    Profile Information
+Non Admin
 {% endblock page_title %}
 
 {% block page_name  %}
-    Profile Information
+    Dashboard
 {% endblock page_name %}
 
 {% block content %}
-    <div class="row">
-        {% include "FOSUserBundle:Profile:show_content.html.twig" %}
+    <div class="col-md-12">
+        Blank page content goes here
     </div>
+
 {% endblock content %}
