--- a/src/AppBundle/Resources/views/Registration/confirmed.html.twig
+++ b/src/AppBundle/Resources/views/Registration/confirmed.html.twig
@@ -1,10 +1,22 @@
-{% extends "FOSUserBundle::layout.html.twig" %}
-
+{% extends 'base.html.twig' %}
 {% trans_default_domain 'FOSUserBundle' %}
+{% block stylesheets %}
+    <style>
+        body {
+            background-color: #fff !important;
+        }
+    </style>
+{% endblock %}
 
-{% block fos_user_content %}
-    <p>{{ 'registration.confirmed'|trans({'%username%': user.username}) }}</p>
-    {% if targetUrl %}
-    <p><a href="{{ targetUrl }}">{{ 'registration.back'|trans }}</a></p>
-    {% endif %}
-{% endblock fos_user_content %}
+{% block body %}
+    <div class="login">
+        {% block fos_user_content %}
+            <p>{{ 'registration.confirmed'|trans({'%username%': user.username}) }}</p>
+            {% if targetUrl %}
+                <p><a href="{{ targetUrl }}">{{ 'registration.back'|trans }}</a></p>
+            {% endif %}
+        {% endblock fos_user_content %}
+    </div>
+{% endblock %}
+
+
