--- a/src/AppBundle/Resources/views/Registration/register.html.twig
+++ b/src/AppBundle/Resources/views/Registration/register.html.twig
@@ -1,15 +1,10 @@
-{% extends ":template:layout.html.twig" %}
+{% extends "FOSUserBundle::layout.html.twig" %}
 
-{% block page_title  %}
-    Add New User
-{% endblock page_title %}
+{% trans_default_domain 'FOSUserBundle' %}
 
-{% block page_name  %}
-    Add New User
-{% endblock page_name %}
+{% block fos_user_content %}
 
-{% block content %}
     <div class="row">
         {% include "FOSUserBundle:Registration:register_content.html.twig" %}
     </div>
-{% endblock content %}
+{% endblock fos_user_content %}
