--- a/src/AppBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/AppBundle/Resources/views/Registration/register_content.html.twig
@@ -1,7 +1,11 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-<div class="col-md-6 col-md-offset-1">
-{{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'form-group'}}) }}
+<img class="logo" height="35" src="{{ asset('images/logo.png') }}" alt="Do logo">
+
+<div class="col-md-6 col-md-offset-3 ">
+{{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'register-form'}}) }}
+    {{ form_label(form.invitation) }}
+    {{ form_widget(form.invitation , { 'attr': {'class': 'form-control'} }) }}
 
     {{ form_label(form.email) }}
     {{ form_widget(form.email , { 'attr': {'class': 'form-control'} }) }}
