--- a/src/AppBundle/Resources/views/ChangePassword/changePassword_content.html.twig
+++ b/src/AppBundle/Resources/views/ChangePassword/changePassword_content.html.twig
@@ -2,10 +2,11 @@
 
 <div class="col-md-4 col-md-offset-1">
 {{ form_start(form, { 'action': path('fos_user_change_password'), 'attr': { 'class': 'form-group' } }) }}
-
+    {{ form_errors(form.current_password) }}
     {{ form_label(form.current_password) }}
     {{ form_widget(form.current_password , { 'attr': {'class': 'form-control'} }) }}
 
+    {{ form_errors(form.plainPassword.first) }}
     {{ form_label (form.plainPassword.first) }}
     {{ form_widget (form.plainPassword.first, { 'attr': {'class': 'form-control'}}) }}
 
