--- a/src/AppBundle/Resources/views/Admin/send_invitation.html.twig
+++ b/src/AppBundle/Resources/views/Admin/send_invitation.html.twig
@@ -11,13 +11,14 @@
 {% block content %}
     <div class="row">
         <div class="col-md-6 col-md-offset-1">
+            {{ form_errors(form) }}
             {{ form_start(form, { 'action': path('send_invitation'), 'attr': { 'class': 'form-group' } }) }}
             {{ form_label(form.email) }}
             {{ form_widget(form.email , { 'attr': {'class': 'form-control'} }) }}
-            {{ form_end(form) }}
             <div style="padding-top: 20px;">
-                <input class="btn btn-success" type="submit" value="{{ 'profile.edit.submit'|trans }}" />
+            <input class="btn btn-success" type="submit" value="Send Invitation" />
             </div>
+            {{ form_end(form) }}
         </div>
     </div>
 {% endblock content %}
