--- a/src/AppBundle/Resources/views/Admin/send_invitation.html.twig
+++ b/src/AppBundle/Resources/views/Admin/send_invitation.html.twig
@@ -9,6 +9,11 @@
 {% endblock page_name %}
 
 {% block content %}
+    {% if success %}
+        <div class="col-md-8">
+            <div class="bs-callout bs-callout-success ">{{ success }}</div>
+        </div>
+    {% endif %}
     <div class="row">
         <div class="col-md-6 col-md-offset-1">
             {{ form_errors(form) }}
