--- a/src/AppBundle/Resources/views/Security/login.html.twig
+++ b/src/AppBundle/Resources/views/Security/login.html.twig
@@ -3,10 +3,13 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 {% block fos_user_content %}
+    <div class="row">
 {% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    <div class="col-md-8 col-md-offset-2">
+    <div class="bs-callout bs-callout-danger ">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    </div>
 {% endif %}
-
+    </div>
 
         <img class="logo" height="35" src="{{ asset('images/logo.png') }}" alt="Do logo">
         <form class="vertical-form" action="{{ path("fos_user_security_check") }}" method="post">
