--- a/src/AppBundle/Resources/views/ChangePassword/changePassword_content.html.twig
+++ b/src/AppBundle/Resources/views/ChangePassword/changePassword_content.html.twig
@@ -1,12 +1,25 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
+{% if not form.vars.valid %}
+    <div class="col-md-8">
+        <div class="bs-callout bs-callout-danger ">
+            {{ form_errors(form.current_password) }}
+            {{ form_errors(form.plainPassword.first) }}
+        </div>
+    </div>
+{% endif %}
+    {% if success %}
+        <div class="col-md-8">
+            <div class="bs-callout bs-callout-success ">{{ success }}</div>
+        </div>
+    {% endif %}
+
 <div class="col-md-4 col-md-offset-1">
-{{ form_start(form, { 'action': path('fos_user_change_password'), 'attr': { 'class': 'form-group' } }) }}
-    {{ form_errors(form.current_password) }}
+    {{ form_start(form, { 'action': path('fos_user_change_password'), 'attr': { 'class': 'form-group' } }) }}
+
     {{ form_label(form.current_password) }}
     {{ form_widget(form.current_password , { 'attr': {'class': 'form-control'} }) }}
 
-    {{ form_errors(form.plainPassword.first) }}
     {{ form_label (form.plainPassword.first) }}
     {{ form_widget (form.plainPassword.first, { 'attr': {'class': 'form-control'}}) }}
 
@@ -15,5 +28,5 @@
     <div style="padding-top: 20px;">
         <input class="btn btn-success"  type="submit" value="{{ 'change_password.submit'|trans }}" />
     </div>
-{{ form_end(form) }}
+    {{ form_end(form) }}
 </div>
