--- a/src/AppBundle/Resources/views/Resetting/reset_content.html.twig
+++ b/src/AppBundle/Resources/views/Resetting/reset_content.html.twig
@@ -1,8 +1,13 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-{{ form_start(form, { 'action': path('fos_user_resetting_reset', {'token': token}), 'attr': { 'class': 'fos_user_resetting_reset' } }) }}
-    {{ form_widget(form) }}
-    <div>
+{{ form_start(form, { 'action': path('fos_user_resetting_reset', {'token': token}), 'attr': { 'class': 'vertical-form' } }) }}
+
+    {{ form_label (form.plainPassword.first) }}
+    {{ form_widget (form.plainPassword.first, { 'attr': {'class': 'form-control'}}) }}
+
+    {{ form_label (form.plainPassword.second) }}
+    {{ form_widget (form.plainPassword.second, { 'attr': {'class': 'form-control'}, 'label_attr': {'class': 'sr-only'}}) }}
+    <div style="padding-top: 20px;">
         <input type="submit" value="{{ 'resetting.reset.submit'|trans }}" />
     </div>
 {{ form_end(form) }}
