--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -85,6 +85,8 @@ legend {
     padding:40px;
     border-radius:3px;
     background:#333;
+    color: #fff;
+    font-size: 20px;
 }
 .login .register-form {
     margin:0 auto;
