Updating small bugs and pushing to server.

--- a/app/Resources/views/template/layout.html.twig
+++ b/app/Resources/views/template/layout.html.twig
@@ -102,7 +102,7 @@
                             </li>
                             {% if is_granted('ROLE_ADMIN') %}
                                 <li>
-                                    <a href="{{ path('fos_user_registration_register') }}"><i class="icon-anchor"></i></i> Invite User</a>
+                                    <a href="{{ path('send_invitation') }}"><i class="icon-anchor"></i></i> Invite User</a>
                                 </li>
                             {% endif %}
                         </ul>
