--- a/src/AppBundle/Resources/views/Security/send_invitation.html.twig
+++ b/src/AppBundle/Resources/views/Security/send_invitation.html.twig
@@ -5,8 +5,21 @@
 {% endblock page_title %}
 
 {% block page_name  %}
-    Send Invitation
+    <i class="fa fa-home"></i>Send Invitation
 {% endblock page_name %}
+
+{% block actions %}
+    <div class="btn-group pull-right">
+        <button type="button" class="btn btn-fit-height default dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="1000" data-close-others="true">
+            Actions <i class="fa fa-angle-down"></i>
+        </button>
+        <ul class="dropdown-menu pull-right" role="menu">
+            <li>
+                <a href="{{ path('all_invitations') }}">View All Invitations</a>
+            </li>
+        </ul>
+    </div>
+{% endblock actions %}
 
 {% block content %}
     {% if success %}
