Added First/Last name to user and registrations.

--- a/src/AppBundle/Resources/views/Profile/edit_content.html.twig
+++ b/src/AppBundle/Resources/views/Profile/edit_content.html.twig
@@ -17,6 +17,16 @@
 
 <div class="col-md-6 col-md-offset-1">
 {{ form_start(form, { 'action': path('fos_user_profile_edit'), 'attr': { 'class': 'form-group' } }) }}
+    <div class="row">
+        <div class="col-md-6">
+            {{ form_label(form.first_name) }}
+            {{ form_widget(form.first_name , { 'attr': {'class': 'form-control'} }) }}
+        </div>
+        <div class="col-md-6">
+            {{ form_label(form.last_name) }}
+            {{ form_widget(form.last_name , { 'attr': {'class': 'form-control'} }) }}
+        </div>
+    </div>
     {{ form_label(form.username) }}
     {{ form_widget(form.username , { 'attr': {'class': 'form-control'} }) }}
     {{ form_label(form.email) }}
