--- a/src/AppBundle/Resources/views/Email/send_invitation_email.html.twig
+++ b/src/AppBundle/Resources/views/Email/send_invitation_email.html.twig
@@ -2,8 +2,10 @@
 <p>You have received an invitation to register. Use the code below in the registration form.</p>
 <h2>{{ code }}</h2>
 {# example, assuming you have a route named "login" #}
-To register go <a href="{{ url('fos_user_registration_register') }}">here</a>.
+<p>To register go <a href="{{ url('fos_user_registration_register') }}">here</a></p>
 
-Thanks!
+<p>
+    Thanks!
+</p>
 
 <img src="{{ absolute_url(asset('images/logo.png')) }}">
