--- a/src/AppBundle/Resources/views/Registration/confirmed.html.twig
+++ b/src/AppBundle/Resources/views/Registration/confirmed.html.twig
@@ -9,13 +9,19 @@
 {% endblock %}
 
 {% block body %}
-    <div class="login">
+    <div class="container">
+
+        <div class="login">
+            <img class="logo" height="35" src="{{ asset('images/logo.png') }}" alt="Do logo">
+            <div class="vertical-form">
         {% block fos_user_content %}
             <p>{{ 'registration.confirmed'|trans({'%username%': user.username}) }}</p>
             {% if targetUrl %}
-                <p><a href="{{ targetUrl }}">{{ 'registration.back'|trans }}</a></p>
+                <p><a href="{{ path('fos_user_security_login') }}">Go to your account now.</a></p>
             {% endif %}
         {% endblock fos_user_content %}
+        </div>
+    </div>
     </div>
 {% endblock %}
 
