--- a/app/Resources/views/template/layout.html.twig
+++ b/app/Resources/views/template/layout.html.twig
@@ -102,7 +102,11 @@
                             </li>
                             {% if is_granted('ROLE_ADMIN') %}
                                 <li>
-                                    <a href="{{ path('send_invitation') }}"><i class="icon-anchor"></i></i> Invite User</a>
+                                    <a href="{{ path('send_invitation') }}"><i class="icon-anchor"></i> Invite User</a>
+                                </li>
+                                <li>
+                                    <a href="{{ path('view_users') }}"><i class="icon-book-open"></i> All Registered
+                                        Users</a>
                                 </li>
                             {% endif %}
                         </ul>
