--- a/src/AppBundle/Resources/views/Admin/admin_edit_user.html.twig
+++ b/src/AppBundle/Resources/views/Admin/admin_edit_user.html.twig
@@ -1,7 +1,7 @@
 {% extends ":template:layout.html.twig" %}
 
 
-
+{% block title %}Edit User{% endblock %}
 {% block page_title %}
     All Registered Users
 {% endblock page_title %}
