--- a/src/AppBundle/Resources/views/Admin/view_users.html.twig
+++ b/src/AppBundle/Resources/views/Admin/view_users.html.twig
@@ -1,5 +1,6 @@
 {% extends ":template:layout.html.twig" %}
 
+{% block title %}All Users{% endblock %}
 {% block page_title  %}
 All Registered Users
 {% endblock page_title %}
