--- a/src/AppBundle/Resources/views/ChangePassword/changePassword.html.twig
+++ b/src/AppBundle/Resources/views/ChangePassword/changePassword.html.twig
@@ -1,5 +1,5 @@
 {% extends "template/layout.html.twig" %}
-
+{% block title %}Change Password{% endblock %}
 {% block page_title  %}
     Change Password
 {% endblock page_title %}
