--- a/src/AppBundle/Resources/views/Profile/edit.html.twig
+++ b/src/AppBundle/Resources/views/Profile/edit.html.twig
@@ -1,5 +1,5 @@
 {% extends ":template:layout.html.twig" %}
-
+{% block title %}Profile{% endblock %}
 {% block page_title  %}
     Edit Information
 {% endblock page_title %}
