--- a/src/AppBundle/Resources/views/Security/invitations_sent.html.twig
+++ b/src/AppBundle/Resources/views/Security/invitations_sent.html.twig
@@ -1,7 +1,7 @@
 {% extends ":template:layout.html.twig" %}
 
 
-
+{% block title %}All Invitaions{% endblock %}
 {% block page_title  %}
 All Sent Invitations
 {% endblock page_title %}
