--- a/src/AppBundle/Resources/views/Security/send_invitation.html.twig
+++ b/src/AppBundle/Resources/views/Security/send_invitation.html.twig
@@ -1,5 +1,5 @@
 {% extends ":template:layout.html.twig" %}
-
+{% block title %}Send Invite{% endblock %}
 {% block page_title  %}
     Send Invitation
 {% endblock page_title %}
