--- a/src/AppBundle/Resources/views/User/home.html.twig
+++ b/src/AppBundle/Resources/views/User/home.html.twig
@@ -1,6 +1,6 @@
 {% extends ":template:layout.html.twig" %}
 
-
+{% block title %}Home{% endblock %}
 
 {% block page_title  %}
 Non Admin / Admin Hompage
