--- a/src/AppBundle/Resources/views/Registration/confirmed.html.twig
+++ b/src/AppBundle/Resources/views/Registration/confirmed.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% block title %}Welcome!{% endblock %}
 {% trans_default_domain 'FOSUserBundle' %}
 {% block stylesheets %}
     <style>
