--- a/src/AppBundle/Resources/views/Group/new.html.twig
+++ b/src/AppBundle/Resources/views/Group/new.html.twig
@@ -1,12 +1,12 @@
 {% extends ":template:layout.html.twig" %}
 
-{% block title %}New Group{% endblock %}
+{% block title %}New Office{% endblock %}
 {% block page_title %}
-    New Group
+    New Office
 {% endblock page_title %}
 
 {% block page_name %}
-    Group
+    Office
 {% endblock page_name %}
 
 {% block content %}
