--- a/app/Resources/views/template/layout.html.twig
+++ b/app/Resources/views/template/layout.html.twig
@@ -92,11 +92,11 @@
                         </a>
                         <ul class="sub-menu">
                             <li>
-                                <a href="{{ path('fos_user_group_list') }}"><i class="fa fa-users"></i> View All Groups</a>
+                                <a href="{{ path('fos_user_group_list') }}"><i class="fa fa-users"></i> View All Offices</a>
                             </li>
                             <li>
                                 <a href="{{ path('fos_user_group_new') }}"><i class="fa fa-plus-square-o"></i> Add New
-                                    Group</a>
+                                    Office</a>
                             </li>
                             <li>
                                 <a href="{{ path('send_invitation') }}"><i class="fa fa-user"></i> Send User Invite</a>
