--- a/src/AppBundle/Resources/views/Group/list.html.twig
+++ b/src/AppBundle/Resources/views/Group/list.html.twig
@@ -1,5 +1,22 @@
-{% extends "FOSUserBundle::layout.html.twig" %}
+{% extends ":template:layout.html.twig" %}
 
-{% block fos_user_content %}
+{% block title %}All Users{% endblock %}
+{% block page_title %}
+    All Registered Users
+{% endblock page_title %}
+
+{% block page_name %}
+    <i class="fa fa-home"></i> Users
+{% endblock page_name %}
+
+{% block actions %}
+{% endblock actions %}
+
+{% block content %}
     {% include "FOSUserBundle:Group:list_content.html.twig" %}
-{% endblock fos_user_content %}
+
+
+{% endblock content %}
+
+
+
