--- a/src/AppBundle/Resources/views/Group/list_content.html.twig
+++ b/src/AppBundle/Resources/views/Group/list_content.html.twig
@@ -1,8 +1,127 @@
-<div class="fos_user_group_list">
-    <ul>
-        {% for group in groups %}
-            <li><a href="{{ path('fos_user_group_show', {'groupName': group.getName()} ) }}">{{ group.getName() }}</a>
-            </li>
-        {% endfor %}
-    </ul>
-</div>
+<div class="row">
+    <div class="col-md-12">
+        <div class="portlet">
+            <div class="portlet-title">
+                <div class="caption">
+                    <i class="fa fa-globe"></i>Offices
+                </div>
+            </div>
+            <div class="portlet-body">
+                <div id="sample_6_wrapper" class="dataTables_wrapper no-footer">
+                    <div class="row">
+                        <div class="col-md-6 col-sm-12">
+                            <div class="dataTables_length" id="sample_6_length">
+                                <label>
+                                    <div class="select2-container form-control input-xsmall input-inline"
+                                         id="s2id_autogen11">
+                                        <a href="javascript:void(0)" class="select2-choice" tabindex="-1">
+                                            <span class="select2-chosen" id="select2-chosen-12">5</span>
+                                            <abbr class="select2-search-choice-close"></abbr>
+                                            <span class="select2-arrow" role="presentation"><b role="presentation"></b></span></a>
+                                        <label for="s2id_autogen12" class="select2-offscreen"></label>
+                                        <input class="select2-focusser select2-offscreen" type="text"
+                                               aria-haspopup="true" role="button" aria-labelledby="select2-chosen-12"
+                                               id="s2id_autogen12">
+                                    </div>
+                                    <select name="sample_6_length" aria-controls="sample_6"
+                                            class="form-control input-xsmall input-inline select2-offscreen"
+                                            tabindex="-1" title="">
+                                        <option value="5">5</option>
+                                        <option value="15">15</option>
+                                        <option value="20">20</option>
+                                        <option value="-1">All</option>
+                                    </select> records </label>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-sm-12">
+                            <div id="sample_6_filter" class="dataTables_filter">
+                                <label>Search:<input type="search" class="form-control input-small input-inline"
+                                                     aria-controls="sample_6">
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="table-scrollable">
+                        <table class="table table-striped table-bordered table-hover dataTable no-footer" id="sample_6"
+                               role="grid" aria-describedby="sample_6_info">
+                            <thead>
+                            <tr role="row">
+                                <th class="sorting_disabled" rowspan="1" colspan="1" aria-label="
+									 Rendering engine
+								" data-column-index="0" style="width: 210px;">
+                                    Name
+                                </th>
+                                <th class="sorting" tabindex="0" aria-controls="sample_6" rowspan="1" colspan="1"
+                                    aria-label="
+									 Browser
+								: activate to sort column ascending" data-column-index="1" style="width: 281px;">
+
+                                    Office Number
+                                </th>
+                                <th class="hidden-xs sorting" tabindex="0" aria-controls="sample_6" rowspan="1"
+                                    colspan="1" aria-label="
+									 Platform(s)
+								: activate to sort column ascending" data-column-index="2" style="width: 254px;">
+                                    Address
+                                </th>
+                                <th class="hidden-xs sorting" tabindex="0" aria-controls="sample_6" rowspan="1"
+                                    colspan="1" aria-label="
+									 Platform(s)
+								: activate to sort column ascending" data-column-index="2" style="width: 254px;">
+                                    City
+                                </th>
+                                <th class="hidden-xs sorting" tabindex="0" aria-controls="sample_6" rowspan="1"
+                                    colspan="1" aria-label="
+									 Platform(s)
+								: activate to sort column ascending" data-column-index="2" style="width: 254px;">
+                                    State
+                                </th>
+                                <th class="hidden-xs sorting" tabindex="0" aria-controls="sample_6" rowspan="1"
+                                    colspan="1" aria-label="
+									 Platform(s)
+								: activate to sort column ascending" data-column-index="2" style="width: 254px;">
+                                    Zip
+                                </th>
+                                <th class="hidden-xs sorting" tabindex="0" aria-controls="sample_6" rowspan="1"
+                                    colspan="1" aria-label="
+									 Platform(s)
+								: activate to sort column ascending" data-column-index="2" style="width: 254px;">
+                                    Phone
+                                </th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for group in groups %}
+                                <tr role="row" class="odd">
+                                    <td>
+                                        {{ group.getName() }} <a
+                                                href="{{ path('fos_user_group_edit', {'groupName': group.getName()} ) }}"><i
+                                                    class="fa fa-pencil fa-2x"></i> Edit</a>
+                                    </td>
+                                    <td class="">
+                                        {{ group.getOfficeNumber() }}
+                                    </td>
+                                    <td class="">
+                                        {{ group.getAddress() }}
+                                    </td>
+                                    <td class="">
+                                        {{ group.getCity() }}
+                                    </td>
+                                    <td class="">
+                                        {{ group.getState() }}
+                                    </td>
+                                    <td class="">
+                                        {{ group.getZip() }}
+                                    </td>
+                                    <td class="">
+                                        {{ group.getPhone() }}
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
