--- a/src/AppBundle/Resources/views/Admin/admin_edit_user.html.twig
+++ b/src/AppBundle/Resources/views/Admin/admin_edit_user.html.twig
@@ -15,7 +15,7 @@
 
 {% block content %}
     {% if not form.vars.valid %}
-        <div class="col-md-8">
+        <div class="col-md-12">
             <div class="bs-callout bs-callout-danger ">
                 {{ form_errors(form.username) }}
                 {{ form_errors(form.email) }}
@@ -24,30 +24,34 @@
         </div>
     {% endif %}
     {% if success %}
-        <div class="col-md-8">
+        <div class="col-md-12">
             <div class="bs-callout bs-callout-success ">{{ success }}</div>
         </div>
     {% endif %}
 
 
-    <div class="col-md-6 col-md-offset-1">
-    {{ form_start(form, { 'action': path('fos_user_profile_edit'), 'attr': { 'class': 'form-group' } }) }}
-    <div class="row">
-        <div class="col-md-6">
-            {{ form_label(form.first_name) }}
-            {{ form_widget(form.first_name , { 'attr': {'class': 'form-control'} }) }}
+    <div class="container">
+        <div class="portlet-body form">
+            <div class="form-body">
+                {{ form_start(form, { 'action': path('fos_user_profile_edit'), 'attr': { 'class': 'form-group' } }) }}
+                <h3 class="form-section">Employee Info</h3>
+                <div class="row">
+                    <div class="col-md-6">
+                        {{ form_label(form.first_name) }}
+                        {{ form_widget(form.first_name , { 'attr': {'class': 'form-control'} }) }}
+                    </div>
+                    <div class="col-md-6">
+                        {{ form_label(form.last_name) }}
+                        {{ form_widget(form.last_name , { 'attr': {'class': 'form-control'} }) }}
+                    </div>
+                </div>
+                {{ form_label(form.email) }}
+                {{ form_widget(form.email , { 'attr': {'class': 'form-control'} }) }}
+            </div>
         </div>
-        <div class="col-md-6">
-            {{ form_label(form.last_name) }}
-            {{ form_widget(form.last_name , { 'attr': {'class': 'form-control'} }) }}
+        <div style="padding-top: 20px;">
+            <input class="btn btn-success" type="submit" value="Update"/>
         </div>
     </div>
-    {{ form_label(form.email) }}
-    {{ form_widget(form.email , { 'attr': {'class': 'form-control'} }) }}
-
-    <div style="padding-top: 20px;">
-        <input class="btn btn-success" type="submit" value="Update"/>
-    </div>
-
     {{ form_end(form) }}
 {% endblock content %}
