Added flash success messages.

--- a/src/AppBundle/Resources/views/Group/list.html.twig
+++ b/src/AppBundle/Resources/views/Group/list.html.twig
@@ -1,8 +1,8 @@
 {% extends ":template:layout.html.twig" %}
 
-{% block title %}All Users{% endblock %}
+{% block title %}All Offices{% endblock %}
 {% block page_title %}
-    All Registered Users
+    All Registered Offices
 {% endblock page_title %}
 
 {% block page_name %}
