Updated forms to work with symfony 3

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="{{ asset('css/custom.css') }}" />
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
-    <body class="page-header-fixed">
+    <body class="page-header-fixed page-sidebar-closed">
 
     {% block body %}{% endblock %}
 
