--- a/src/AppBundle/Resources/public/css/themes/default.css
+++ b/src/AppBundle/Resources/public/css/themes/default.css
@@ -6,7 +6,7 @@ Reset and overrides
 ***/
 body {
   color: #222222;
-  background-color: #35363a !important;
+  background-color: #242527;
 }
 /***
 Page header
