--- a/app/Resources/views/template/layout.html.twig
+++ b/app/Resources/views/template/layout.html.twig
@@ -18,14 +18,18 @@
             <!-- END RESPONSIVE MENU TOGGLER -->
             <!-- BEGIN TOP NAVIGATION MENU -->
             <ul class="nav navbar-nav pull-right">
-
+                <li class="dropdown user">
+                    <a class="welcome">
+                        <span class="username">Welcome back {{ app.user }}</span>
+                    </a>
+                </li>
                 <li class="devider">
                     &nbsp;
                 </li>
                 <!-- BEGIN USER LOGIN DROPDOWN -->
                 <li class="dropdown user">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
-				<span class="username">Hello {{ app.user.username }}</span>
+                        <span class="username">Settings</span>
                         <i class="fa fa-angle-down"></i>
                     </a>
                     <ul class="dropdown-menu">
@@ -58,6 +62,7 @@
     <!-- BEGIN CONTAINER -->
 
     <div class="page-container">
+        {% if is_granted('ROLE_ADMIN') %}
         <!-- BEGIN SIDEBAR -->
         <div class="page-sidebar-wrapper">
             <div class="page-sidebar navbar-collapse collapse">
@@ -87,11 +92,12 @@
                     {% if is_granted('ROLE_ADMIN') %}
                         <li class="z {% if app.request.attributes.get('_route') in [
                         'fos_user_group_list',
-                        'fos_user_group_new',
+                        'admin_part_index',
                         'fos_user_group_edit',
                         'send_invitation',
                         'view_users',
-                        'admin_edit_user'
+                        'admin_edit_user',
+                        'admin_partcategory_index'
                         ] %}active{% endif %}">
                         <a href="javascript:">
                             <i class="fa fa-lock"></i>
@@ -103,9 +109,14 @@
                             <li {% if app.request.get('_route') == 'fos_user_group_list' %} class="active"{% endif %}>
                                 <a href="{{ path('fos_user_group_list') }}"><i class="fa fa-users"></i> View All Offices</a>
                             </li>
-                            <li {% if app.request.get('_route') == 'fos_user_group_new' %} class="active"{% endif %}>
-                                <a href="{{ path('fos_user_group_new') }}"><i class="fa fa-plus-square-o"></i> Add New
-                                    Office</a>
+                            <li {% if app.request.get('_route') == 'admin_part_index' %} class="active"{% endif %}>
+                                <a href="{{ path('admin_part_index') }}"><i class="fa fa-archive"></i> View All
+                                    Parts</a>
+                            </li>
+                            <li {% if app.request.get('_route') == 'admin_partcategory_index' %} class="active"{% endif %}>
+                                <a href="{{ path('admin_partcategory_index') }}"><i class="fa fa-folder-open-o"></i>
+                                    View All
+                                    Part Categories</a>
                             </li>
                             <li {% if app.request.get('_route') == 'send_invitation' %} class="active"{% endif %}>
                                 <a href="{{ path('send_invitation') }}"><i class="fa fa-user"></i> Send User Invite</a>
@@ -119,8 +130,9 @@
                     </li>
                     {% endif %}
                     <li class="z {% if app.request.attributes.get('_route') in [
-                    'fos_user_profile_edit',
-                    'fos_user_change_password',
+                    'fos_user_group_new',
+                    'admin_part_new',
+                    'admin_partcategory_new',
                     ] %}active{% endif %}">
                         <a href="javascript:">
                             <i class="icon-settings"></i>
@@ -129,11 +141,18 @@
                             <span class="arrow "></span>
                         </a>
                         <ul class="sub-menu">
-                            <li {% if app.request.get('_route') == 'fos_user_profile_edit' %} class="active"{% endif %}>
-                                <a href="{{ path('fos_user_profile_edit') }}"><i class="fa fa-user"></i> Update Profile</a>
+                            <li {% if app.request.get('_route') == 'fos_user_group_new' %} class="active"{% endif %}>
+                                <a href="{{ path('fos_user_group_new') }}"><i class="fa fa-plus-square-o"></i> Add New
+                                    Office</a>
                             </li>
-                            <li {% if app.request.get('_route') == 'fos_user_change_password' %} class="active"{% endif %}>
-                                <a href="{{ path('fos_user_change_password') }}"><i class="fa fa-key"></i> Change Password</a>
+                            <li {% if app.request.get('_route') == 'admin_part_new' %} class="active"{% endif %}>
+                                <a href="{{ path('admin_part_new') }}"><i class="fa fa-plus-square-o"></i> Add New
+                                    Part</a>
+                            </li>
+                            <li {% if app.request.get('_route') == 'admin_partcategory_new' %} class="active"{% endif %}>
+                                <a href="{{ path('admin_partcategory_new') }}"><i class="fa fa-plus-square-o"></i> Add
+                                    New
+                                    Part Category</a>
                             </li>
                         </ul>
                     </li>
@@ -269,6 +288,13 @@
             </div>
         </div>
         <!-- END SIDEBAR -->
+        {% else %}
+            <style>
+                .page-sidebar-closed .page-content {
+                    margin-left: 0px !important;
+                }
+            </style>
+        {% endif %}
         <!-- BEGIN CONTENT -->
         <div class="page-content-wrapper">
             <div class="page-content">
