--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -226,6 +226,9 @@ legend {
     margin: 0 auto;
 }
 
+form {
+    display: inline;
+}
 .footer {
     padding: 20px 20px 5px 20px;
     font-size: 12px;
