--- a/src/AppBundle/Resources/views/Part/edit.html.twig
+++ b/src/AppBundle/Resources/views/Part/edit.html.twig
@@ -11,6 +11,11 @@
 {% endblock page_name %}
 
 {% block content %}
+    <style>
+        form {
+            display: inline;
+        }
+    </style>
     <div class="col-md-6">
 
 
