--- a/src/AppBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/AppBundle/Resources/views/Registration/register_content.html.twig
@@ -1,7 +1,8 @@
 {% trans_default_domain 'FOSUserBundle' %}
 <div class="row">
-    {% if not form.vars.valid %}
+
         <div class="col-md-6 col-md-offset-3 ">
+            {% if not form.vars.valid %}
             <div class="bs-callout bs-callout-danger ">
                 {{ form_errors(form.invitation) }}
                 {{ form_errors(form.first_name) }}
@@ -9,9 +10,22 @@
                 {{ form_errors(form.email) }}
                 {{ form_errors(form.username) }}
                 {{ form_errors(form.plainPassword.first) }}
+
             </div>
+            {% endif %}
+
+            {% for flash_message in app.session.flashbag.get('notice') %}
+                <div class="bs-callout bs-callout-alert ">
+                    {{ flash_message }}
+                </div>
+            {% endfor %}
+            {% for flash_message in app.session.flashbag.get('error') %}
+                <div class="bs-callout bs-callout-danger ">
+                    {{ flash_message }}
+                </div>
+            {% endfor %}
         </div>
-    {% endif %}
+
 </div>
 
 <img class="logo" height="35" src="{{ asset('images/logo.png') }}" alt="Do logo">
@@ -21,28 +35,28 @@
 
 
     {{ form_label(form.invitation) }}
-    {{ form_widget(form.invitation , { 'attr': {'class': 'form-control'} }) }}
+    {{ form_widget(form.invitation , { 'attr': {'class': 'form-control', 'style': 'margin-bottom: 10px'} }) }}
     <div class="row">
         <div class="col-md-6">
         {{ form_label(form.first_name) }}
-        {{ form_widget(form.first_name , { 'attr': {'class': 'form-control'} }) }}
+            {{ form_widget(form.first_name , { 'attr': {'class': 'form-control', 'style': 'margin-bottom: 10px'} }) }}
         </div>
         <div class="col-md-6">
         {{ form_label(form.last_name) }}
-        {{ form_widget(form.last_name , { 'attr': {'class': 'form-control'} }) }}
+            {{ form_widget(form.last_name , { 'attr': {'class': 'form-control', 'style': 'margin-bottom: 10px'} }) }}
         </div>
     </div>
     {{ form_label(form.email) }}
-    {{ form_widget(form.email , { 'attr': {'class': 'form-control'} }) }}
+    {{ form_widget(form.email , { 'attr': {'class': 'form-control', 'style': 'margin-bottom: 10px'} }) }}
 
     {{ form_label(form.username) }}
-    {{ form_widget(form.username , { 'attr': {'class': 'form-control'} }) }}
+    {{ form_widget(form.username , { 'attr': {'class': 'form-control', 'style': 'margin-bottom: 10px'} }) }}
 
     {{ form_label (form.plainPassword.first) }}
-    {{ form_widget (form.plainPassword.first, { 'attr': {'class': 'form-control'}}) }}
+    {{ form_widget (form.plainPassword.first, { 'attr': {'class': 'form-control', 'style': 'margin-bottom: 10px'}}) }}
 
     {{ form_label (form.plainPassword.second) }}
-    {{ form_widget (form.plainPassword.second, { 'attr': {'class': 'form-control'}}) }}
+    {{ form_widget (form.plainPassword.second, { 'attr': {'class': 'form-control', 'style': 'margin-bottom: 10px'}}) }}
     <div style="padding-top: 20px;">
         <input class="btn btn-success" type="submit" value="{{ 'registration.submit'|trans }}" />
     </div>
