--- a/src/AppBundle/Resources/views/Admin/admin_edit_user.html.twig
+++ b/src/AppBundle/Resources/views/Admin/admin_edit_user.html.twig
@@ -27,25 +27,43 @@
     <div class="container">
         <div class="portlet-body form">
             <div class="form-body">
-                {{ form_start(form, { 'action': path('fos_user_profile_edit'), 'attr': { 'class': 'form-group' } }) }}
+                {{ form_start(form, { 'action': path('admin_edit_user', { 'user_id': user_id }), 'attr': { 'class': 'form-group' } }) }}
                 <h3 class="form-section">Edit Employee Info</h3>
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         {{ form_label(form.first_name) }}
-                        {{ form_widget(form.first_name , { 'attr': {'class': 'form-control'} }) }}
+                        {{ form_widget(form.first_name) }}
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         {{ form_label(form.last_name) }}
-                        {{ form_widget(form.last_name , { 'attr': {'class': 'form-control'} }) }}
+                        {{ form_widget(form.last_name) }}
                     </div>
                 </div>
-                {{ form_label(form.email) }}
-                {{ form_widget(form.email , { 'attr': {'class': 'form-control'} }) }}
+                <div class="row">
+                    <div class="col-md-8">
+                        {{ form_label(form.email) }}
+                        {{ form_widget(form.email) }}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        {{ form_label(form.office) }}
+                        {{ form_widget(form.office) }}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-2">
+                        {{ form_label(form.enabled) }}
+                        {{ form_widget(form.enabled) }}
+                    </div>
+                </div>
+                <div style="padding-top: 20px;">
+                    <input class="btn btn-success" type="submit" value="Update"/>
+                </div>
             </div>
+
         </div>
-        <div style="padding-top: 20px;">
-            <input class="btn btn-success" type="submit" value="Update"/>
-        </div>
+
     </div>
     {{ form_end(form) }}
 {% endblock content %}
