--- a/src/AppBundle/Resources/views/Group/edit.html.twig
+++ b/src/AppBundle/Resources/views/Group/edit.html.twig
@@ -6,7 +6,7 @@
 {% endblock page_title %}
 
 {% block page_name %}
-    Office
+    <a href="{{ path('fos_user_group_list') }}"><i class="fa fa-angle-left"></i>Back to the Offices</a>
 {% endblock page_name %}
 
 {% block content %}
