Added checks on registration.

--- a/app/Resources/views/template/layout.html.twig
+++ b/app/Resources/views/template/layout.html.twig
@@ -224,7 +224,7 @@
                     </div>
                 </div>
                 <!-- BEGIN PAGE CONTENT-->
-                <div class="row">
+                <div class="container">
                     {{ block('content') }}
                 </div>
                 <!-- END PAGE CONTENT-->
